--- a/src/main/resources/com/ntdk/quizapp/style.css
+++ b/src/main/resources/com/ntdk/quizapp/style.css
@@ -8,5 +8,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 */
 .Main{
     -fx-background-color: lightblue;
+    -fx-padding: 10;
+    -fx-font-size :10;
 }
 
