--- a/src/main/resources/com/ntdk/quizapp/primary.fxml
+++ b/src/main/resources/com/ntdk/quizapp/primary.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragDetected="#handleQuestionManagement" prefHeight="400.0" prefWidth="600.0" styleClass="Main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ntdk.quizapp.PrimaryController">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="QuizApp" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Subject" text="QuizApp" />
+      <Button mnemonicParsing="false" onAction="#handleQuestionManagement" styleClass="Button" text="Quản lý câu hỏi" />
+      <Button layoutX="261.0" layoutY="225.0" mnemonicParsing="false" onAction="#handlePractice" styleClass="Button" text="Luyện tập" />
+      <Button layoutX="276.0" layoutY="237.0" mnemonicParsing="false" styleClass="Button" text="Thi" />
+      <Button layoutX="294.0" layoutY="250.0" mnemonicParsing="false" styleClass="Button" text="Đăng ký" />
+      <Button layoutX="280.0" layoutY="262.0" mnemonicParsing="false" styleClass="Button" text="Đăng nhập" />
    </children>
 </VBox>
